# ez

./: .gitignore  Makefile  README.md  TODO.md  compile  dune-project  ez.opam
backend/: CMakeLists.txt  compile_commands.json
backend/include/: alias.hpp  extra_exceptions.hpp  ezdebug.hpp  ir_visitor.hpp  objgen.hpp  optimizer.hpp  scoped_environment.hpp
backend/proto_gen/: ez_ir.pb.cc  ez_ir.pb.h
backend/src/: ezdebug.cpp  ir_visitor.cpp  main.cpp  objgen.cpp  optimizer.cpp  scoped_environment.cpp
examples/: early_return.ez  fib.ez  simple_print.ez  std.ez
ezstd/: CMakeLists.txt  build.zig  build.zig.zon  compile_commands.json
ezstd/src/: ez_std.c  ez_string.c  root.zig
lib/: ast.ml  dune  ez_ir.ml  ez_ir.mli  ez_lib.ml  frontend.ml  lexer.mll  parser.mly  parser_nice.ml  postcheck.ml  precheck.ml  typecheck.ml
proto/: ez_ir.proto
test/: dune
